1726 line css change

--- a/assets/css/templatemo-574-mexant.css
+++ b/assets/css/templatemo-574-mexant.css
@@ -1725,7 +1725,7 @@ body {
   }
   .slide-inner .header-text p {
     /* display: none; */
-    visibility: visible;
+    /* visibility: visible; */
   }
   .slide-inner .header-text {
     text-align: center;
