--- a/assets/css/templatemo-574-mexant.css
+++ b/assets/css/templatemo-574-mexant.css
@@ -1653,7 +1653,7 @@ body {
 
 @media (max-width: 992px) {
   .header-area .main-nav .nav li:last-child {
-    display: inline-block;
+    display: none;
   }
   .header-area .main-nav .nav li ul li:last-child {
     display: inline-block;
